fix city region and new frontend
